--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=clustered-data-warehouse
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/fx_deals
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/schema.sql
+
+
