--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.5.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.clustered-data-warehouse</groupId>
+    <groupId>org.hotelreservation</groupId>
     <artifactId>clustered-data-warehouse</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>clustered-data-warehouse</name>
